# rust-postgres-benchmark

./: .env.example  .gitignore  Cargo.toml  README.md  benchmark.sh  database.sql
postgres-0.15.2/: Cargo.toml
postgres-0.15.2/src/: api.rs  main.rs
postgres-0.16-rc.2/: Cargo.toml
postgres-0.16-rc.2/src/: db.rs  main.rs
postgres-0.17.5/: Cargo.toml
postgres-0.17.5/src/: main.rs
postgres-0.19.4/: Cargo.toml
postgres-0.19.4/src/: main.rs
src/: api.rs  main.rs
tokio-postgres-0.3.0/: Cargo.toml
tokio-postgres-0.3.0/src/: main.rs
tokio-postgres-0.4.0-rc.3/: Cargo.toml
tokio-postgres-0.4.0-rc.3/src/: main.rs
tokio-postgres-0.5.0-09a63d6/: Cargo.toml
tokio-postgres-0.5.0-09a63d6/src/: db.rs
tokio-postgres-0.5.0-alpha.2/: Cargo.toml
tokio-postgres-0.5.0-alpha.2/src/: main.rs
tokio-postgres-0.5.5/: Cargo.toml
tokio-postgres-0.5.5/src/: main.rs
tokio-postgres-0.7.7/: Cargo.toml
tokio-postgres-0.7.7/src/: db.rs  main.rs
tokio-postgres-0.7.7_current_thread/: Cargo.toml
tokio-postgres-0.7.7_current_thread/src/: main.rs
