[package]
name = "rust-postgres-benchmark"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "0.2.4"
actix-web = "1.0"
dotenv = "0.14.1"
futures = "0.1.28"
tokio = "0.1.22"
tokio-postgres = { version = "0.4.0-rc.3", features = ["with-uuid-0_7"] }
uuid = { version = "0.7", features = ["v4"] }
